src/objects/slmt__Sales_Meeting__c.object
<CustomObject>
    <description>Storing all the planned meetings for each responsible, in addition to the planned date and time, the collaborator and the type.</description>
    <fields>
        <fullName>CloseDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CloseDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Collaborator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collaborator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reason_Unrealized__c</fullName>
        <label>Reason (Unrealized)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Holidays</fullName>
                </value>
                <value>
                    <fullName>No availability of agenda</fullName>
                </value>
                <value>
                    <fullName>There were expired opportunities</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_meeting__c</fullName>
        <label>Type of meeting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Tracing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_340, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_340)) &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>slmt__management_plan_meeting_date__c</fullName>
        <description>The day the meeting is scheduled.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The day the meeting is scheduled.</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>slmt__mngmt_plan_meet_dur_number__c</fullName>
        <description>The meeting duration. Initially only 15  minutes will be allowed, but it will accept increments of 15min. These values will exist but will deploy inactive by default.</description>
        <inlineHelpText>The meeting duration. Initially only 15  minutes will be allowed, but it will accept increments of 15min. These values will exist but will deploy inactive by default.</inlineHelpText>
        <label>Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>20</fullName>
                    <default>true</default>
                    <label>20</label>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>35</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>45</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>slmt__mngmt_plan_meeting_start_desc__c</fullName>
        <description>The Start time.</description>
        <inlineHelpText>The Start time.</inlineHelpText>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>slmt__mngmt_plan_meeting_status_name__c</fullName>
        <description>The meeting status. Will be planned once created. When done, will be updated to Finalized</description>
        <inlineHelpText>The meeting status. Will be planned once created. When done, will be updated to Finalized</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Planned</fullName>
                    <default>true</default>
                    <label>Planned</label>
                </value>
                <value>
                    <fullName>Finalized</fullName>
                </value>
                <value>
                    <fullName>Unrealized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>slmt__mngmt_plan_meeting_user_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person who is invited to to the meeting to review the sales rep plan.</description>
        <inlineHelpText>The person who is invited to to the meeting to review the sales rep plan.</inlineHelpText>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Meeting</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Mis_reuniones</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Mis reuniones</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Meetings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Invalid_DateTime_Ejecutivo_Planning_Type</fullName>
        <active>false</active>
        <description>If SM is Planning type and colaborator is ejecutivo, and BE_DateTime__c is greater than the first 6 working days of the month</description>
        <errorConditionFormula>IF(ISPICKVAL(BE_Type_of_meeting__c, &apos;Planning&apos;) &amp;&amp; 
	(00N0m000006Dxrn.00N1I00000Mp8gb == &apos;E03&apos; || 
		00N0m000006Dxrn.00N1I00000Mp8gb == &apos;I32&apos;),
	IF(DATEVALUE(BE_DateTime__c) &gt;= DATE(YEAR(DATEVALUE(BE_DateTime__c)), MONTH(DATEVALUE(BE_DateTime__c)), 1) &amp;&amp;
		DATEVALUE(BE_DateTime__c)&lt;= DATE(YEAR(DATEVALUE(BE_DateTime__c)), MONTH(DATEVALUE(BE_DateTime__c)), CASE(
																					MOD( DATE(YEAR(DATEVALUE(BE_DateTime__c)), MONTH(DATEVALUE(BE_DateTime__c)), 1) - DATE( 1900, 1, 8 ), 7 ),
																					0, 8,
																					1, 8,
																					2, 8,
																					3, 8,
																					4, 8,
																					5, 10,
																					9)), 
		false, true), 
	false)</errorConditionFormula>
        <errorMessage>No puede colocar una fecha mayor a los 6 pimeros días utiles del mes.</errorMessage>
    </validationRules>
</CustomObject>